# personal-finance-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  apps_portfolio.py  dash_plot_lib.py  lib_dash_pages.py  lib_dash_plot.py  lib_data_operations.py  lib_finance.py  lib_portfolio.py  main_app.py  portfolio_lib.py  pyproject.toml  requirements_venv.txt  tab_portfolio_overview.py  update_finance_data.py
ipynb_files/: compute_portfolio_value.ipynb  mvp_get_cumsum.ipynb  plot_portfolio_value.ipynb  portfolio_cumsum.ipynb  scrape_ETF_prices_masterdata.ipynb
src/: datahub_etl.py  datahub_main.py
src/dashboard/: main_app.py
src/dashboard/dashboard_lib/: app.py  apps_portfolio.py
src/dashboard/plotting_lib/: lib_dash_plot.py
src/datahub/: meta_datahub.json
src/datahub/datahub_crypto/: crypto_lib.py  extract_crypto_data.py  transform_crypto_data.py
src/datahub/datahub_stocks/: extract_stocks_data.py  stocks_lib.py  transform_stocks_data.py
src/datahub/processing_layer/: lib_data_operations.py
src/datahub/toshl_datahub/: toshl_datahub.py
src/datahub/utilities/: utils.py
src/utilities/: utils.py
